tests/semantic_errors/files/proj_5_void_func_addition.c
void voidValue() {
}

int main() {
    int a = voidValue() + 1;
    return 0;
}